Auto-import packages when extracting a widget to a new file (#95)
* Copy import statements when extracting widget to new file

* Optimize imports for extracted file